--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
-
 spring.application.name=application
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
+spring.datasource.password=
 
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.data-locations=classpath:db/data.sql
+spring.sql.init.mode=always
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
